--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ owner:
   github:         adenot
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:  ''
+google_analytics:  UA-7269254-2
 google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
