--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ dropcap:		      true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:        	    http://allandenot.com
+#url:        	    http://allandenot.com
 
 # Owner/author information
 owner:
@@ -23,7 +23,7 @@ owner:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:  UA-7269254-2
-google_verify:
+google_verify: zw7TMFq_zQa7OSBv4Tt7oqrlvN45XpNapPCFpiI0YUw
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
 
