--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Allan Denot
-description:      "Thoughts"
+description:      "Trying to Define DevOps"
 logo:             logo.png
 disqus_shortname: adenot
 share:            true
