--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title:            Allan Denot
-description:      "Trying to Define DevOps"
+description:      "Dreams of DevOps"
 logo:             logo.png
 disqus_shortname: adenot
 share:            true
-dropcap:		  true
+dropcap:		      true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
