--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   avatar:         adenot.jpg
   email:          adenot at gmail
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    'From publishing software to the cloud, I started in 2001 by releasing a Linux distribution in Brazil, built 2 more products, co-founded a company, migrated to Australia, got a master’s degree, got married, became a DevOps engineer and now co-founder of SpikeNode.com.'
+  description:    'From publishing software to the cloud, I started in 2001 by releasing a Linux distribution in Brazil, built 2 more products, co-founded a company, migrated to Australia, got a master’s degree, got married, became an Australian citizen and a DevOps engineer, now looking into the future of platforms.'
   # Social networking links used in footer. Update and remove as you like.
   twitter:        denot
   facebook:       allandenot
